--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     compile 'io.dropwizard.metrics:metrics-core:3.2.3'
     compile 'io.dropwizard.metrics:metrics-annotation:3.2.3'
 
+    compile 'io.github.http-builder-ng:http-builder-ng-core:1.0.3'
+
     compile 'org.apache.commons:commons-lang3:3.5'
 
     testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
