add /monitor/models endpoint

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,5 @@ server.port=40411
 
 services.articles.url=http://localhost:40402/
 #services.articles.url=http:/185.14.185.186:40402/
+services.models.url=http://localhost:40408/
+#services.models.url=http://185.14.185.186:40408/
