--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.profiles.active=dev
 management.security.enabled=false
 
 services.articles.url=http://potic-articles:8080/
+services.models.url=http://potic-models:8080/
